2025-11-13T01:58:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19317982076 # 807
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-13
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1141 1621 / 1143 1623
* notice: next accum: outdated-unq outdated-all / unq all: 1141 1621 / 1144 1624
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-12]

2025-11-12T01:56:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19283865327 # 806
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-12
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 1141 1621 / 1142 1622
* notice: next accum: outdated-unq outdated-all / unq all: 1141 1621 / 1143 1623
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-11]

2025-11-07T01:55:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19155698952 # 801
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-07
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 1140 1620 / 1142 1622
* notice: next accum: outdated-unq outdated-all / unq all: 1141 1621 / 1142 1622
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-23] / []

2025-11-06T01:56:59Z: