@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-13T01:58:30Z",
-  "count_outdated" : 1621,
-  "uniques_outdated" : 1141,
+  "timestamp" : "2025-11-15T01:53:32Z",
+  "count_outdated" : 1622,
+  "uniques_outdated" : 1142,
   "count" : 1624,
   "uniques" : 1144,
   "clones" : [
-    {
-      "timestamp": "2025-10-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-11T00:00:00Z",
       "count": 1,
