@@ -1,3 +1,12 @@
+2025-11-15T01:53:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19382585885 # 809
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-15
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 1141 1621 / 1144 1624
+* notice: next accum: outdated-unq outdated-all / unq all: 1142 1622 / 1144 1624
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-10-31] / []
+
 2025-11-13T01:58:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19317982076 # 807
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-13
